<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/FloralWhite"
    android:clickable="true" android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lin"
        android:paddingTop="5dp"
        android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:clickable="false"
            android:layout_marginTop="5dp">

            <LinearLayout

                android:orientation="vertical"
                android:id="@+id/buttonMozmanim"
                android:layout_height="match_parent" android:layout_width="wrap_content"
                android:layout_gravity="center" android:background="@drawable/rec_text_editred"
                android:padding="5dp"
                android:layout_marginRight="5dp" android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/imageViewMozmanim"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6" android:text="@string/valueeaten" android:textSize="18dp"
                    android:gravity="center" android:textColor="@color/Maroon"/>

                <TextView
                    android:layout_width="match_parent"
                    android:clickable="false"

                    android:text="0" android:textStyle="bold"
                    android:textColor="@color/Maroon"
                    android:layout_height="0dp"
                    android:textSize="30sp"
                    android:layout_weight="1" android:gravity="center" android:id="@+id/textview1"
                />


            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"

                android:orientation="vertical"
                android:id="@+id/calWhere"
                android:background="@drawable/rec_text_editgreennoborder"
                android:layout_height="match_parent" android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_marginRight="5dp" android:layout_marginLeft="5dp">

                <TextView
                    android:id="@+id/imageView12"

                    android:layout_width="match_parent" android:layout_height="0dp"
                    android:layout_weight="0.6" android:textSize="18dp" android:gravity="center"
                    android:text="@string/totalfor100" android:textColor="#df086080"/>

                <TextView
                    android:layout_width="match_parent"
                    android:clickable="false"

                    android:text="0" android:textStyle="bold"
                    android:textColor="#df086080"
                    android:layout_height="0dp"
                    android:textSize="30sp" android:layout_weight="1"
                    android:id="@+id/textview2" android:gravity="center_horizontal"
                />


            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal"
            android:id="@+id/linall" android:layout_gravity="top"
            android:orientation="vertical" android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:id="@+id/linhel"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" android:background="@drawable/rec_text_blue_border">
                <TextView
                    android:text="@string/hel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_gravity="left|center_vertical" android:layout_weight="0.3"
                />
                <SeekBar
                    android:layout_height="27dp"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/SeekBarhel" android:layout_gravity="center_vertical"
                    android:layout_weight="0.6" android:layout_width="0dp"
                />
                <EditText
                    android:layout_width="0dp"
                    android:inputType="numberDecimal"
                    android:background="@drawable/rec_text_none"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical|center_horizontal" android:layout_weight="0.20"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:text="0"
                    android:layout_gravity="center_vertical"
                    android:layout_height="27dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" android:background="@drawable/rec_text_blue_border">
                <TextView
                    android:text="@string/pah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    android:layout_weight="0.3" android:textColor="@android:color/black"
                    android:textSize="14dp" android:layout_gravity="left|center_vertical"/>
                <SeekBar
                    android:layout_height="27dp"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/seekBarpah" android:layout_gravity="center_vertical"
                    android:layout_width="0dp" android:layout_weight="0.6"
                />
                <EditText
                    android:layout_width="0dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="10dp" android:paddingLeft="10dp"
                    android:gravity="center_vertical|center_horizontal" android:layout_weight="0.2"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical" android:layout_height="27dp"
                    android:background="@drawable/rec_text_none" android:text="0"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:layout_marginTop="5dp"
                android:paddingLeft="5dp" android:paddingRight="5dp"
                android:background="@drawable/rec_text_blue_border">
                <TextView
                    android:text="@string/fat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView6"
                    android:layout_weight="0.3" android:textColor="@android:color/black"
                    android:textSize="14sp" android:layout_gravity="left|center_vertical"/>
                <SeekBar
                    android:layout_height="27dp"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/seekBarfat" android:layout_gravity="center_vertical"
                    android:layout_width="0dp" android:layout_weight="0.6"
                />
                <EditText
                    android:layout_width="0dp"
                    android:background="@drawable/rec_text_none"
                    android:ems="10"
                    android:id="@+id/editText6"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="10dp" android:paddingLeft="10dp"
                    android:gravity="center_vertical|center_horizontal" android:layout_weight="0.2"
                    android:selectAllOnFocus="true"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical" android:layout_height="27dp"
                    android:text="0"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:layout_marginTop="5dp"
                android:paddingLeft="5dp" android:paddingRight="5dp"
                android:background="@drawable/rec_text_blue_border">
                <TextView
                    android:text="@string/siv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:layout_weight="0.3" android:textColor="@android:color/black"
                    android:textSize="14dp" android:layout_gravity="left|center_vertical"/>
                <SeekBar
                    android:layout_height="27dp"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/seekBarsiv" android:layout_gravity="center_vertical"
                    android:layout_width="0dp" android:layout_weight="0.6"
                />
                <EditText
                    android:layout_width="0dp"
                    android:background="@drawable/rec_text_none"
                    android:ems="10"
                    android:id="@+id/editText7"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="10dp" android:paddingLeft="10dp"
                    android:gravity="center_vertical|center_horizontal" android:layout_weight="0.2"
                    android:selectAllOnFocus="true"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black" android:layout_gravity="center_vertical"
                    android:layout_height="27dp" android:text="0"/>
            </LinearLayout>


            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" android:visibility="visible"
                android:layout_marginTop="5dp">
            </com.google.android.gms.ads.AdView>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="35dp" android:layout_marginTop="10dp"
                android:paddingRight="5dp" android:paddingLeft="5dp"
                android:background="@drawable/rec_text_editred">
                <TextView
                    android:text="@string/pointsbygrm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView8"
                    android:layout_weight="0.3" android:textColor="@color/maroon"
                    android:gravity="left" android:textSize="14dp"
                    android:layout_gravity="center_vertical"/>
                <SeekBar
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="3"
                    android:id="@+id/SeekBarBygrm" android:layout_gravity="center_vertical"
                    android:layout_width="0dp" android:layout_weight="0.55"/>
                <EditText
                    android:layout_width="0dp"
                    android:ems="10"
                    android:id="@+id/editText8"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="10dp" android:paddingLeft="10dp"
                    android:gravity="center_vertical|center_horizontal" android:layout_weight="0.2"
                    android:selectAllOnFocus="true"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center_vertical" android:layout_height="27dp"
                    android:text="0" android:background="@drawable/rec_text_none"/>
            </LinearLayout>
            <ImageButton
                android:layout_width="match_parent"
                android:id="@+id/imageButton"
                android:layout_marginTop="30dp"
                android:src="@drawable/garbage" android:layout_height="0dp"
                android:layout_weight="1" android:background="@android:drawable/btn_default"/>
            <Button
                android:layout_width="match_parent"
                android:id="@+id/imageButton2"
                android:layout_marginTop="15dp"
                android:layout_height="0dp"
                android:layout_weight="1" android:drawableLeft="@drawable/rate_icon"
                android:drawableRight="@drawable/rate_icon" android:text="@string/premium"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>